# TaxBrackets

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  taxBrackets.cpp  taxBrackets_2018.json  taxes  unitTests
app/: Ideas.txt  main.h
app/src/: main.cpp
finTools/: CmakeLists.txt  unitTests
finTools/taxBrackets/gtests/: test_taxBrackets.cpp
finTools/taxBrackets/src/: taxBrackets.cpp
taxBrackets/: taxBrackets.h
taxBrackets/src/: taxBrackets.cpp
test/: test_taxBrackets.cpp
